# ChangeLog for games-emulation/bsnes
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2

  15 Dec 2008; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.037a.ebuild,
  +bsnes-0.038.ebuild, +files/bsnes-makefile.patch:
  Bumped. Added USE flags for enabling video/audio modules. Changed deps.
  Replaced sed with patch.

  06 Nov 2008; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.036.ebuild,
  +bsnes-0.037a.ebuild:
  Bumped. Removed previous version.

  18 Sep 2008; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.035.ebuild,
  +bsnes-0.036.ebuild:
  Bumped. Removed previous version.

  23 Aug 2008; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.034.ebuild,
  +bsnes-0.035.ebuild:
  Bumped. Removed previous version.

  21 Aug 2008; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.033.ebuild,
  +bsnes-0.034.ebuild:
  Bumped. Removed previous version.

  13 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> bsnes-0.033.ebuild:
  Fixed whitespace.

  20 Jul 2008; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.032a.ebuild,
  +bsnes-0.033.ebuild:
  Bumped. Removed previous version.

  26 May 2008; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.032.ebuild,
  +bsnes-0.032a.ebuild:
  Bumped.

  25 May 2008; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.031.ebuild,
  +bsnes-0.032.ebuild:
  Bumped. Previous version removed.

  13 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.030.ebuild,
  -bsnes-0.030-r1.ebuild, +bsnes-0.031.ebuild:
  Bumped. Removed old versions.

  02 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.030-r1.ebuild:
  Fixed some more bad deps. Seems freealut isn't needed anymore. Missed libao
  and libXv the last time. Rev-bumped.

  01 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.030.ebuild:
  Added missing dep

  27 Mar 2008; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.028.ebuild,
  -bsnes-0.028.01.ebuild, -bsnes-0.029.ebuild, bsnes-0.030.ebuild:
  Clean out old ebuilds. Some cosmetic fixes.

  26 Mar 2008; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.030.ebuild:
  Bumped.
