@@ -1,4 +1,4 @@
 AUX bsnes-makefile.patch 396 RMD160 0cb3e792e3806f9acaaa72b25e43dae2facfaabf SHA1 1788417a8df44fc55495450d6371ba649915497c SHA256 4c806c0e9528b2ddc2fb3f4d664ba4c284fe215b3a909d6a84a938e857ccb742
 DIST bsnes_v038.tar.bz2 448509 RMD160 7fd97bc7737eaf5956359f7243f04bc1ea16c599 SHA1 a18925d58695213a91319b0d2d32563e7d822c08 SHA256 0b5d4c4849f0f31c7d3527a39ac3b3116070fc56f2b7e846f9345cfbc9c84ce6
-EBUILD bsnes-0.038.ebuild 1969 RMD160 bf01917623a93e845dd295e383ab61ef50398f05 SHA1 1c75fe900ee7fe8ac085f20cbc522b3c6859c6ca SHA256 aaa03584b62cf8c5c9bdfad19addd01495d395df62a295540dfd467b0c62317f
-MISC ChangeLog 2543 RMD160 d315d77d45f0461d341547bfcc519f780aeee078 SHA1 130f2dd54538610c97ebce0b8c2fe6fbe5981f67 SHA256 952c6da1c9e4cfd1ce73a9708d5f8498d4773ae5cb3ea12c6034c43cd0cda8a3
+EBUILD bsnes-0.038.ebuild 1967 RMD160 8bb431fc9522aef754eace295172b0a8d2e01c61 SHA1 670dbe5c3e55e47cc6fdf290d6a89fcafceb5045 SHA256 797200777c59eda8f3fbef5340ed5520a4f84b0a73de85f1f9bd89883192b094
+MISC ChangeLog 2642 RMD160 75f3155687cd6fc14d1d92865851a1427a1d1af7 SHA1 9dfc80159c4d6dcbf242e1cc632980f7c67bad53 SHA256 94ba2e46823e1517cf36cea6d5e54c5c0952a33a449803089a321f33b14846c5
