@@ -1,5 +1,8 @@
 # ChangeLog for games-emulation/bsnes
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+
+  12 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> bsnes-0.038.ebuild:
+  Fixed trailing whatespaces.
 
   15 Dec 2008; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.037a.ebuild,
   +bsnes-0.038.ebuild, +files/bsnes-makefile.patch:
